dev/2048/2048-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "2048-deployment"
  namespace: "2048-game"
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
      - image: alexwhen/docker-2048
        resources:
          limits:
            cpu: "500m"
          requests:
            cpu: "200m"
        imagePullPolicy: Always
        name: "2048"
        ports:
        - containerPort: 80
