dev/2048/2048-ingress.yaml
# combined ingress being tracked here: https://github.com/kubernetes-sigs/aws-alb-ingress-controller/issues/688

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 2048-ingress
  namespace: 2048-game
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
  labels:
    app: 2048-ingress
spec:
  rules:
    - host: 2048.dev.intranet.local
      http:
        paths:
          - path: /*
            backend:
              serviceName: service-2048
              servicePort: 80
